# AI

./: .gitignore  CMakeLists.txt  InputGeneration.cpp  main.cpp
AI/: AIMain.cpp  ai.pro  generation.cpp  generation.h
AI/QTAI/ai/: ai.pro  main.cpp
AI/src/: Connection.cpp  Connection.hpp  NeuralData.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Node.cpp  Node.hpp
AI_src/: AIMain.cpp  generation.cpp  generation.h
AI_src/src/: Connection.cpp  Connection.hpp  NeuralNetwork.cpp  Node.cpp
ANN_API/: API.cpp  API.hpp  APIMain.cpp
ANN_API_src/: API.cpp  API.hpp
Helper/: Config.hpp
InputGen/: InputGeneration.hpp  main.cpp
InputGen_src/: Input.hpp
Server/: Server.pro  server.cpp  server.h
Server_src/: Server.pro  server.h
Web/: index.html
WebClient/: Graph.js  WebClient.html  Websocket.js
WebClient_src/: WebClient.css  WebClient.html
